[gd_scene load_steps=2 format=2]

[ext_resource path="res://Cenas/script_teste.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Button" type="Button" parent="."]
margin_left = 360.0
margin_top = 216.0
margin_right = 505.0
margin_bottom = 264.0
text = "tela de vitoria naruto"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="."]
margin_left = 472.0
margin_top = 456.0
margin_right = 592.0
margin_bottom = 504.0
text = "game over"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button4" type="Button" parent="."]
margin_left = 688.0
margin_top = 224.0
margin_right = 836.0
margin_bottom = 272.0
text = "tela de vitoria sasuke"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_Button4_pressed"]
